--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container",class=background-color: #fff,class="font-size-base">
    
     <div class="row">
-      <div class="col-xs-6">.col-xs-6</div>   
+      <div class="col-xs-6"></div>   
       <div class="col-md-12 jumbotron text-center">
         <img src="https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/4022230/1214/1214/m1/fpnw/wm1/1704.045.s.z001.bacteria-.jpg?1518955242&s=7724a67ff7a6b6398320952c68a4bff1" 
         class="img-responsive" alt="Responsive image">
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-6">.col-xs-6</div>
+      <div class="col-xs-6"></div>
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
@@ -40,18 +40,18 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div class="col-xs-6">.col-xs-6</div>
+        <div class="col-xs-6"></div>
         <div id="bar"></div>
       </div>
       <div class="col-md-5">
-        <div class="col-xs-6">.col-xs-6</div>
+        <div class="col-xs-6"></div>
         <div id="gauge"></div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         
-        <div class="col-xs-6">.col-xs-6</div>
+        <div class="col-xs-6"></div>
         <div id="bubble"></div>
       </div>
     </div>
