--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-md-2"></div>
       <div class="col-xs-2"></div>
-      <div class="col-md-2">
+      
         <div class="well">
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
@@ -49,8 +50,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12">
-        
+      <div class="col-md-12">  
         <div class="col-xs-12"></div>
         <div id="bubble"></div>
       </div>
